--- a/src/main/resources/templates/administration/administration.html
+++ b/src/main/resources/templates/administration/administration.html
@@ -53,7 +53,7 @@
                                     <i class="fa fa-code fa-4x"></i>
                                 </div>
                                 <div class="panel-body text-center">
-                                    <h3 class="margin-bottom-10"> <a th:href="@{/administration/users/new}">Создание пользователя</a></h3>
+                                    <h3 class="margin-bottom-10"> <a th:href="@{/administration/tutors/new}">Создание репетитора</a></h3>
                                 </div>
                             </div>
                         </div>
