--- a/src/main/resources/templates/order/new.html
+++ b/src/main/resources/templates/order/new.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
-    <title>Заказы</title>
+    <title>Оформление заказа</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
@@ -21,22 +21,63 @@
     <div th:replace="fragments/header :: header"></div>
 
     <div th:replace="fragments/menu :: menu('tutors')"></div>
+    <!--<div class="container">-->
+        <!--<div class="container background-white">-->
+            <!--<div class="row margin-vert-30">-->
+                <!--<h2>Заказ</h2>-->
+                <!--<p>Пожалуйста опишите что Вы хотите от занятий, как часто Вы хотели бы их проводить и в какое время,-->
+                <!--какой цели Вы хотите достичь по итогам занятий. Сообщение будет отправлено репетитору и при его согласии-->
+                    <!--он с вами свяжется в максимально короткое время.</p>-->
+                <!--<form th:action="@{'/tutors/' + ${id} + '/order'}" method="POST">-->
+
+                <!--<div class="row margin-bottom-20">-->
+                    <!--<div class="col-md-8 col-md-offset-0">-->
+                        <!--<textarea rows="8" class="form-control" name="message"></textarea>-->
+                    <!--</div>-->
+                <!--</div>-->
+                <!--<div class="row">-->
+                        <!--<button type="submit" class="btn btn-primary">Отправить</button>-->
+                <!--</div>-->
+                <!--</form>-->
+            <!--</div></div>-->
+    <!--</div>-->
+
     <div class="container">
         <div class="container background-white">
             <div class="row margin-vert-30">
                 <h2>Заказ</h2>
-                <p>Укажите в поле ниже информацию для занятия Какая цель занятий Как часто вы хотель бы заниматься
-                Когда вы бы хотель преступить к первому звнятию </p>
-                <form th:action="@{'/tutors/' + ${id} + '/order'}" method="POST">
+                <p>Пожалуйста опишите что Вы хотите от занятий, как часто Вы хотели бы их проводить и в какое время,
+                    какой цели Вы хотите достичь по итогам занятий. Сообщение будет отправлено репетитору и при его согласии
+                    он с вами свяжется в максимально короткое время.</p>
+                <form th:object="${order}" th:action="@{'/orders'}" method="POST">
 
-                <div class="row margin-bottom-20">
-                    <div class="col-md-8 col-md-offset-0">
-                        <textarea rows="8" class="form-control" name="message"></textarea>
+                    <div class="row margin-bottom-20">
+                        <div class="col-md-8 col-md-offset-0">
+                            <textarea rows="8" class="form-control" th:field="*{message}"></textarea>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
+
+                    <label>Количество занятий в месяц (Если вы хотите заниматься 1 ра в неделю, то 4, если 2, то 8 и т.д.)
+                        <span class="color-red">*</span>
+                    </label>
+                    <input rows="8" class="form-control" th:field="*{pereodicity}">
+
+
+                    <label>Тип занятия
+                        <span class="color-red">*</span>
+                    </label>
+                    <select id="roles" class="form-control margin-bottom-20" th:field="*{lessonTypes}" >
+                        <option value=""></option>
+                        <option th:each="l : ${lessonTypes}" th:value="${l.id}" th:text="${l.name}"/>
+                    </select>
+
+                    <input type="hidden" th:field="*{client}">
+                    <input type="hidden" th:field="*{tutor}">
+                    <input type="hidden" th:field="*{orderStatus}">
+
+                    <div class="row">
                         <button type="submit" class="btn btn-primary">Отправить</button>
-                </div>
+                    </div>
                 </form>
             </div></div>
     </div>
