--- a/src/main/resources/templates/administration/order/list.html
+++ b/src/main/resources/templates/administration/order/list.html
@@ -22,16 +22,27 @@
 
     <div th:replace="fragments/menu :: menu('tutors')"></div>
     <div class="container">
-        <div class="container background-white">
-            <div class="row margin-vert-30">
-                <p>Сообщение отправлено репетитору.
-                    Среднее время отклика репетиторов 2 часа. При согласии проведения
-                    занятий репетитор свяжется с Вами по телефону для оговорки детале первого занятия. Если же репетитор
-                    откажется от проведения занятий по причинам не зависящим от нас, то информация об этом появится в
-                    Вашем личном кабинете в разделе "Заказы".
-                    Если репетитор не даст свой ответ в течении 24 часов, мы свяжемся с ним сами.</p>
-            </div>
-        </div>
+        <h2>Репетиторы</h2>
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Клиент</th>
+                <th>Репетитор</th>
+                <th>Сообщение</th>
+                <th>Дата</th>
+                <th>Статус</th>
+            </tr>
+            </thead>
+            <tbody th:each="order : ${orders}">
+            <tr>
+                <td><a th:href="@{'/tutors/' + ${tutor.id}}"><span th:text="${order.client.getFullName()}"></span></a></td>
+                <td th:text="${order.tutor.getFullName()}"></td>
+                <td th:text="${order.message}"></td>
+                <td th:text="${#dates.format(h.date, 'dd-MM-yyyy')}"></td>
+                <td th:text="${order.orderStatus.name}"></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
     <div th:replace="fragments/footer :: contacts"></div>
 
