--- a/src/main/resources/templates/order/declined.html
+++ b/src/main/resources/templates/order/declined.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
-    <title>Заказы</title>
+    <title>Отклонение заказа</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
@@ -24,14 +24,8 @@
     <div class="container">
         <div class="container background-white">
             <div class="row margin-vert-30">
-                <p>Сообщение отправлено репетитору.
-                    Среднее время отклика репетиторов 2 часа. При согласии проведения
-                    занятий репетитор свяжется с Вами по телефону для оговорки детале первого занятия. Если же репетитор
-                    откажется от проведения занятий по причинам не зависящим от нас, то информация об этом появится в
-                    Вашем личном кабинете в разделе "Заказы".
-                    Если репетитор не даст свой ответ в течении 24 часов, мы свяжемся с ним сами.</p>
-            </div>
-        </div>
+                <p>Заказ откланен.</p>
+            </div></div>
     </div>
     <div th:replace="fragments/footer :: contacts"></div>
 
