--- a/src/main/resources/templates/order/list.html
+++ b/src/main/resources/templates/order/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="ru">
 <head>
-    <title>Заказы</title>
+    <title>Ваши заказы</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="description" content=""/>
     <meta name="author" content=""/>
@@ -30,13 +30,13 @@
                      th:each="order : ${orders}">
                     <div class="row margin-bottom-20">
                         <div class="col-md-8 col-md-offset-0">
-                            <textarea rows="8" class="form-control" th:text="${order.message}"></textarea>
+                            <textarea disabled rows="8" class="form-control" th:text="${order.message}"></textarea>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-12 text-right">
-
-                        <a class="btn btn-default" th:href="@{'/orders/' + ${order.id} + '/approve'}" >Отправить</a>
+                        <a class="btn btn-default" th:href="@{'/orders/' + ${order.id} + '/decline'}">Отказаться</a>
+                        <a class="btn btn-default" th:href="@{'/orders/' + ${order.id} + '/approve'}">Согласиться</a>
                         </div></div>
                 </div>
 
